tests/baselines/reference/Protected4.errors.txt
tests/cases/conformance/parser/ecmascript5/Protected/Protected4.ts(2,13): error TS1028: Accessibility modifier already seen.


==== tests/cases/conformance/parser/ecmascript5/Protected/Protected4.ts (1 errors) ====
    class C {
      protected public m() { }
                ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }